--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,43 @@
 <resources>
     <string name="app_name">iSpend</string>
+
+    <string-array name="payMethod">
+        <item>Cash</item>
+        <item>Credit Card</item>
+        <item>Debit Card</item>
+    </string-array>
+
+    <string-array name="monthly_expenses">
+        <item>191.70</item>
+        <item>340.65</item>
+        <item>137.25</item>
+        <item>216.58</item>
+    </string-array>
+
+    <string-array name="weekly_expenses">
+        <item>44.70</item>
+        <item>20.65</item>
+        <item>17.25</item>
+        <item>06.58</item>
+        <item>09.43</item>
+        <item>14.61</item>
+        <item>12.89</item>
+    </string-array>
+
+    <string-array name="monthly_savings">
+        <item>332.45</item>
+        <item>169.22</item>
+        <item>142.00</item>
+        <item>208.33</item>
+    </string-array>
+
+    <string-array name="weekly_savings">
+        <item>72.10</item>
+        <item>12.44</item>
+        <item>31.67</item>
+        <item>22.11</item>
+        <item>54.09</item>
+        <item>33.11</item>
+        <item>10.88</item>
+    </string-array>
 </resources>
